# go-strava

./: BUILD.bazel  GEN.md  README.md  activities_api.go  activity_stats.go  activity_total.go  activity_type.go  activity_zone.go  altitude_stream.go  api_client.go  api_response.go  athletes_api.go  base_stream.go  cadence_stream.go  clubs_api.go  comment.go  configuration.go  detailed_activity.go  detailed_athlete.go  detailed_club.go  detailed_gear.go  detailed_segment.go  detailed_segment_effort.go  distance_stream.go  explorer_response.go  explorer_segment.go  fault.go  gears_api.go  heart_rate_zone_ranges.go  heartrate_stream.go  lap.go  lat_lng_stream.go  meta_activity.go  meta_athlete.go  meta_club.go  model_error.go  moving_stream.go  photos_summary.go  photos_summary_primary.go  polyline_map.go  (+30 more)
api/: swagger.yaml
docs/: ActivitiesApi.md  AthletesApi.md  ClubsApi.md  GearsApi.md  RoutesApi.md  SegmentsApi.md  StreamsApi.md  UploadsApi.md
