load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "activities_api.go",
        "activity_stats.go",
        "activity_total.go",
        "activity_type.go",
        "activity_zone.go",
        "altitude_stream.go",
        "api_client.go",
        "api_response.go",
        "athletes_api.go",
        "base_stream.go",
        "cadence_stream.go",
        "clubs_api.go",
        "comment.go",
        "configuration.go",
        "detailed_activity.go",
        "detailed_athlete.go",
        "detailed_club.go",
        "detailed_gear.go",
        "detailed_segment.go",
        "detailed_segment_effort.go",
        "distance_stream.go",
        "explorer_response.go",
        "explorer_segment.go",
        "fault.go",
        "gears_api.go",
        "heart_rate_zone_ranges.go",
        "heartrate_stream.go",
        "lap.go",
        "lat_lng.go",
        "lat_lng_stream.go",
        "meta_activity.go",
        "meta_athlete.go",
        "meta_club.go",
        "model_error.go",
        "moving_stream.go",
        "photos_summary.go",
        "photos_summary_primary.go",
        "polyline_map.go",
        "power_stream.go",
        "power_zone_ranges.go",
        "route.go",
        "route_direction.go",
        "routes_api.go",
        "running_race.go",
        "running_races_api.go",
        "segment_efforts_api.go",
        "segment_leaderboard.go",
        "segment_leaderboard_entry.go",
        "segments_api.go",
        "smooth_grade_stream.go",
        "smooth_velocity_stream.go",
        "split.go",
        "stream_set.go",
        "streams_api.go",
        "summary_activity.go",
        "summary_athlete.go",
        "summary_club.go",
        "summary_gear.go",
        "summary_segment.go",
        "summary_segment_effort.go",
        "temperature_stream.go",
        "time_stream.go",
        "timed_zone_distribution.go",
        "timed_zone_range.go",
        "updatable_activity.go",
        "upload.go",
        "uploads_api.go",
        "zone_range.go",
        "zone_ranges.go",
        "zones.go",
    ],
    importpath = "github.com/yohcop/go-strava",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_x_oauth2//:go_default_library",
    ],
)
